@@ -1,3 +1,6 @@
+09/14/2018
+- deprecate `opt.secret` in favor of `opts.public_key` and `opts.symmetric_key`
+
 09/06/2018
 - bypass introspection cache on demand with introspection_cache_ignore; thanks @dmitriyblok
 
